--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.0.0",
     "react-scripts": "4.0.3",
+    "swiper": "^7.3.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
